# VOIDRUN

./: .gitignore  CLAUDE.md  Cargo.toml  DOMAIN_REFACTORING_PLAN.md  NAVMESH_FIX.md  REFACTORING_PROGRESS.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: architecture-validator.md
crates/voidrun_client/: Cargo.toml
crates/voidrun_godot/: Cargo.toml
crates/voidrun_godot/src/: avoidance_receiver.rs  chunk_navmesh.rs  collision_layers.rs  debug_overlay.rs  events.rs  lib.rs  los_helpers.rs  projectile.rs  projectile_registry.rs  simulation_bridge.rs
crates/voidrun_godot/src/ai_melee_combat_decision/: decision.rs  evaluation.rs  mod.rs
crates/voidrun_godot/src/attachment/: mod.rs
crates/voidrun_godot/src/camera/: mod.rs  rts_camera.rs
crates/voidrun_godot/src/combat/: mod.rs
crates/voidrun_godot/src/combat/ai_melee/: evaluation.rs  mod.rs  validation.rs
crates/voidrun_godot/src/combat/melee/: mod.rs
crates/voidrun_godot/src/combat/ranged/: mod.rs  projectile.rs  ranged_attack.rs  targeting.rs
crates/voidrun_godot/src/input/: controller.rs  events.rs  mod.rs  systems.rs
crates/voidrun_godot/src/melee/: mod.rs
crates/voidrun_godot/src/movement/: commands.rs  velocity.rs
crates/voidrun_godot/src/movement_system/: commands.rs  mod.rs  navigation.rs  velocity.rs
crates/voidrun_godot/src/navigation/: mod.rs  navmesh.rs
crates/voidrun_godot/src/player/: mod.rs  spawn.rs
crates/voidrun_godot/src/player_shooting/: mod.rs
crates/voidrun_godot/src/projectiles/: mod.rs  projectile.rs  registry.rs
crates/voidrun_godot/src/schedules/: mod.rs  timer_systems.rs
crates/voidrun_godot/src/shared/: actor_utils.rs  collision.rs  los_helpers.rs  mod.rs
crates/voidrun_godot/src/shield_vfx/: mod.rs
crates/voidrun_godot/src/shooting/: mod.rs
crates/voidrun_godot/src/simulation_bridge/: effects.rs  godot_logger.rs  logger.rs  mod.rs  scene.rs  spawn.rs  systems_setup.rs
crates/voidrun_godot/src/systems/: ai_combat.rs  ai_combat_decision.rs  ai_melee_combat_decision.rs  attachment_system.rs  melee_system.rs  mod.rs  movement_system.rs  player_camera_system.rs  player_shooting.rs  shield_vfx_system.rs  vision_system.rs  visual_registry.rs  visual_sync.rs  weapon_switch.rs  weapon_system.rs
crates/voidrun_godot/src/systems/ai_melee_combat_decision/: decision.rs  evaluation.rs  mod.rs
crates/voidrun_godot/src/systems/weapon_system/: mod.rs  projectile.rs  ranged_attack.rs  targeting.rs
crates/voidrun_godot/src/ui/: mod.rs
crates/voidrun_godot/src/vision/: mod.rs
crates/voidrun_godot/src/visual_sync/: labels.rs  lifecycle.rs  mod.rs  spawn.rs
crates/voidrun_godot/src/weapon_switch/: mod.rs
crates/voidrun_godot/src/weapon_system/: projectile.rs  ranged_attack.rs  targeting.rs
crates/voidrun_simulation/: Cargo.toml
crates/voidrun_simulation/src/: components.rs  item_system.rs  lib.rs  main.rs
crates/voidrun_simulation/src/actor/: components.rs  mod.rs
crates/voidrun_simulation/src/ai/: events.rs  mod.rs  simple_fsm.rs
crates/voidrun_simulation/src/ai/components/: fsm.rs  fsm_tests.rs  mod.rs
crates/voidrun_simulation/src/ai/systems/: fsm.rs  mod.rs  movement.rs  reactions.rs
crates/voidrun_simulation/src/combat/: attacker.rs  damage.rs  events.rs  hitbox.rs  melee.rs  mod.rs  stamina.rs  weapon.rs  weapon_stats.rs
crates/voidrun_simulation/src/combat/components/: melee.rs  mod.rs  stamina.rs  weapon.rs  weapon_tests.rs
crates/voidrun_simulation/src/combat/systems/: damage.rs  damage_tests.rs  melee.rs  mod.rs  stamina.rs  stamina_tests.rs  weapon.rs  weapon_tests.rs
crates/voidrun_simulation/src/components/: actor.rs  ai.rs  attachment.rs  camera.rs  combat.rs  equipment.rs  mod.rs  movement.rs  player.rs  player_shooting.rs  world.rs
crates/voidrun_simulation/src/equipment/: events.rs  mod.rs  systems.rs
crates/voidrun_simulation/src/logger/: mod.rs
crates/voidrun_simulation/src/movement/: events.rs  mod.rs
crates/voidrun_simulation/src/physics/: mod.rs  movement.rs
crates/voidrun_simulation/src/rollback/: ggrs_config.rs  mod.rs
crates/voidrun_simulation/src/shared/: attachment.rs  mod.rs
crates/voidrun_simulation/src/shooting/: mod.rs
crates/voidrun_simulation/tests/: combat_integration.rs  determinism.rs
docs/: DOMAIN_ARCHITECTURE_PRINCIPLES.md  STATUS.md  arch_backlog.md  project-vision.md  roadmap.md
docs/architecture/: bevy-ecs-design.md  godot-rust-integration.md  physics-architecture.md  presentation-layer-abstraction.md
docs/decisions/: ADR-002-godot-rust-integration-pattern.md  ADR-003-ecs-vs-godot-physics-ownership.md  ADR-004-command-event-architecture.md  ADR-005-transform-ownership-strategic-positioning.md  ADR-006-chunk-based-streaming-world.md  ADR-007-tscn-prefabs-dynamic-attachment.md
docs/design/: camera-system-vats.md  (+4 more)
godot/: VOIDRUN.pck  icon.svg.import  main.tscn  project.godot
(+21 files in other folders)
