[workspace]
resolver = "2"
members = [
    "crates/voidrun_simulation",
    "crates/voidrun_godot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VOIDRUN Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/voidrun"

[workspace.dependencies]
# Bevy ECS 0.16 (validated 2024-2025)
# MinimalPlugins уже включает bevy_core, bevy_time, bevy_ecs
bevy = { version = "0.16", default-features = false, features = ["multi_threaded"] }

# Deterministic RNG (для Фазы 0)
rand = "0.8"
rand_chacha = "0.3"

# Serialization (для snapshots)
serde = { version = "1.0", features = ["derive"] }

# Фаза 2: Server-Client Netcode (TODO: later)
# bevy_renet или lightyear для client-server архитектуры
# Пока фокус на single-player simulation

[profile.dev]
opt-level = 0  # Твой код: максимально быстрая компиляция

[profile.dev.package."*"]
opt-level = 1  # Dependencies: компромисс (быстрая компиляция + не тормозит игру)
