[package]
name = "voidrun_godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Dynamic library для GDExtension

[dependencies]
# Godot 4.3+ GDExtension bindings
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads", "experimental-godot-api"] }
# Наша симуляция
voidrun_simulation = { path = "../voidrun_simulation" }
# Bevy для direct доступа к ECS типам
bevy = { workspace = true }
# Logging с timestamps
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true # Link-time optimization для production
