[package]
name = "voidrun_simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
chrono = "0.4.42"
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
once_cell = "1.19.0"

[dev-dependencies]
# proptest — добавим когда понадобятся property-based тесты
# Для простых детерминизм-тестов достаточно обычных assert'ов

[lib]
name = "voidrun_simulation"
path = "src/lib.rs"
